src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Booth_Number__c</fullName>
        <label>Booth Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Reps__c</fullName>
        <label>Booth Reps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Value__c</fullName>
        <label>Campaign Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Received__c</fullName>
        <label>Confirmation Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electrical__c</fullName>
        <label>Electrical</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_AEs_Bring__c</fullName>
        <label>Equipment AEs Bring</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_Rented__c</fullName>
        <label>Equipment Rented</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Equipment_Shipped__c</fullName>
        <label>Equipment Shipped</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Events_on_Calendars__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Events on Calendars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Attire__c</fullName>
        <label>Expected Attire</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Professional (Suit/Tie)</fullName>
                </value>
                <value>
                    <fullName>Business Casual (Shirt/Slacks)</fullName>
                </value>
                <value>
                    <fullName>TriTech Professional (Branded)</fullName>
                </value>
                <value>
                    <fullName>Zuercher Professional (Branded)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flights__c</fullName>
        <label>Flights</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Give_Away_Value__c</fullName>
        <inlineHelpText>If we give away a door prize, enter the value here</inlineHelpText>
        <label>Give Away Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <label>Hotel</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internet__c</fullName>
        <label>Internet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>List_on_Social_Media__c</fullName>
        <defaultValue>false</defaultValue>
        <label>List on Social Media</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_on_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>List on Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Materials_to_Ship__c</fullName>
        <label>Materials to Ship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pre_Conference_Email_Blast__c</fullName>
        <label>Pre-Conference Email Blast</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prize_Drawing_Entry_Forms__c</fullName>
        <label>Prize Drawing/Entry Forms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Respond</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Form_Submitted__c</fullName>
        <label>Registration Form Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rental_Car_Arrangement__c</fullName>
        <label>Rental Car Arrangement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Notes__c</fullName>
        <label>Sponsorship Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>Active_Trade_Show_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Product_Family__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Trade Show</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>notEqual</operation>
            <value>No Booths Available-Full,Declined,Aborted,Completed</value>
        </filters>
        <filters>
            <field>Booth_Reps__c</field>
            <operation>contains</operation>
            <value>Zach VanFleet</value>
        </filters>
        <label>Zach VanFleets Conferences</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Product_Family__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>notEqual</operation>
            <value>Declined,Aborted,Completed,No Booths Available-Full</value>
        </filters>
        <label>All Active Campaigns</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Product_Family__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_TriTech_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Product_Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family__c</field>
            <operation>notEqual</operation>
            <value>Zuercher,Perform</value>
        </filters>
        <label>All TriTech Campaigns</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Upcoming_Trade_Shows</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Location__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Booth_Reps__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>Website__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Trade Show</value>
        </filters>
        <label>Upcoming Trade Shows - All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Zuercher_Active_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Product_Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family__c</field>
            <operation>equals</operation>
            <value>Zuercher</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>notEqual</operation>
            <value>No Booths Available-Full,Declined,Aborted,Completed</value>
        </filters>
        <label>All Zuercher Active Campaigns</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Zuercher_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Product_Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family__c</field>
            <operation>equals</operation>
            <value>Zuercher</value>
        </filters>
        <label>All Zuercher Campaigns</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Beth_Rollo_Conferences_2017</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Booth_Reps__c</columns>
        <columns>Campaign_Value__c</columns>
        <columns>Notes__c</columns>
        <columns>Sponsorship_Notes__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booth_Reps__c</field>
            <operation>contains</operation>
            <value>Beth Rollo</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Trade Show</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2018</value>
        </filters>
        <label>Beth Rollo Conferences 2018</label>
        <sharedTo>
            <group>Zuercher_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_open_Conferences_20171</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Booth_Reps__c</columns>
        <columns>Campaign_Value__c</columns>
        <columns>Notes__c</columns>
        <columns>Sponsorship_Notes__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booth_Reps__c</field>
            <operation>contains</operation>
            <value>Tony Small</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Trade Show</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2017</value>
        </filters>
        <label>CA (open) Conferences 2017</label>
        <sharedTo>
            <group>Zuercher_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chris_Warren_Conferences_2017</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Booth_Reps__c</columns>
        <columns>Campaign_Value__c</columns>
        <columns>Notes__c</columns>
        <columns>Sponsorship_Notes__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booth_Reps__c</field>
            <operation>contains</operation>
            <value>Chris Warren</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Trade Show</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2018</value>
        </filters>
        <label>Chris Warren Conferences 2018</label>
        <sharedTo>
            <group>Zuercher_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dan_Snell_Conferences_2017</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Booth_Reps__c</columns>
        <columns>Campaign_Value__c</columns>
        <columns>Notes__c</columns>
        <columns>Sponsorship_Notes__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booth_Reps__c</field>
            <operation>contains</operation>
            <value>Dan Snell</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Trade Show</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2018</value>
        </filters>
        <label>Dan Snell Conferences 2018</label>
        <sharedTo>
            <group>Zuercher_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>David_Bell_Conferences_2017</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Booth_Reps__c</columns>
        <columns>Campaign_Value__c</columns>
        <columns>Notes__c</columns>
        <columns>Sponsorship_Notes__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booth_Reps__c</field>
            <operation>contains</operation>
            <value>David Bell</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Trade Show</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2018</value>
        </filters>
        <label>David Bell Conferences 2018</label>
        <sharedTo>
            <group>Zuercher_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>David_Jones_Conferences_2017</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Booth_Reps__c</columns>
        <columns>Campaign_Value__c</columns>
        <columns>Notes__c</columns>
        <columns>Sponsorship_Notes__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booth_Reps__c</field>
            <operation>contains</operation>
            <value>Gregg Jones</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Trade Show</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2018</value>
        </filters>
        <label>Gregg Jones Conferences 2018</label>
        <sharedTo>
            <group>Zuercher_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dean_Gutzke_Conferences_2017</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Booth_Reps__c</columns>
        <columns>Campaign_Value__c</columns>
        <columns>Notes__c</columns>
        <columns>Sponsorship_Notes__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booth_Reps__c</field>
            <operation>contains</operation>
            <value>Dean Gutzke</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Trade Show</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2018</value>
        </filters>
        <label>Dean Gutzke Conferences 2018</label>
        <sharedTo>
            <group>Zuercher_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dennis_Noe_Conferences_2017</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Booth_Reps__c</columns>
        <columns>Campaign_Value__c</columns>
        <columns>Notes__c</columns>
        <columns>Sponsorship_Notes__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booth_Reps__c</field>
            <operation>contains</operation>
            <value>Dennis Noe</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Trade Show</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2018</value>
        </filters>
        <label>Dennis Noe Conferences 2018</label>
        <sharedTo>
            <group>Zuercher_All</group>
        </sharedTo>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>